# smizzleDev

./: CMakeLists.txt  README.md
cmake/Modules/: FindLibEvent.cmake
gui/: anotherwindow.ui  dialog.ui
src/: CMakeLists.txt
src/chess/: CMakeLists.txt  main.cc  piece.cc  piece.h
src/fix/: CMakeLists.txt  order.h
src/main/: CMakeLists.txt  forward.cc  forward.h  main.cc  test.h
src/messages/: CMakeLists.txt
src/openGl/: CMakeLists.txt
src/pendulum/: CMakeLists.txt  bst.cc  pendulum.cc  pendulum.h
src/proto/: CMakeLists.txt  main.cc
src/qt/: CMakeLists.txt  CMakeLists.txt~  anotherwindow.cpp  anotherwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  smizzleGraphicsView.cpp  smizzleGraphicsView.h
src/shared/: CMakeLists.txt  main.cc
src/sudoku/: CMakeLists.txt  validator.cc  validator.h
src/test/: CMakeLists.txt  gtest-CMakeLists.txt  mytest.cc
src/wheel/: CMakeLists.txt  event.c  event2.c  timer.cc
